--- a/finalproject.html
+++ b/finalproject.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script> var slideIndex = 1;
+  <!-- <script> var slideIndex = 1;
 showSlides(slideIndex);
 
 function plusSlides(n) {
@@ -33,12 +33,12 @@ function showSlides(n) {
   slides[slideIndex-1].style.display = "block";
   dots[slideIndex-1].className += " active";
 }
-</script>
+</script> -->
   <style>
-  * {box-sizing:border-box}
+  /** {box-sizing:border-box}
 
   /* Slideshow container */
-  .slideshow-container {
+  /*.slideshow-container {
     max-width: 1000px;
     position: relative;
     margin: auto;
@@ -126,7 +126,7 @@ function showSlides(n) {
   @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
-  }
+  }*/
    #issues{background-color: Transparent; border:none;
     background-color: Transparent; border:none;
     font-size: 50px; color:white; font-family:serif;
@@ -184,16 +184,16 @@ function showSlides(n) {
       <li class=" navbtn"><a href="">Issues</a></li>
       <li class="dropdown navbtn "><a class="dropdown-toggle" data-toggle="dropdown" href="#get">Get Involved<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li class="navbtn"><a href="">Donate</a></li>
-          <li class="navbtn" ><a href="">Resources</a></li>
+          <li><a href="">Donate</a></li>
+          <li ><a href="">Resources</a></li>
         </ul>
       </li>
       <li class="navbtn"><a href="#game">Game</a></li>
-      <li class="navbtn"><a href="#about">About Us</a></li>
+      <li class="navbtn"><a href="./projectCode.html">About Us</a></li>
     </ul>
   </div>
 </nav>
-
+<!--
 <div class="slideshow-container">
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
@@ -222,4 +222,4 @@ function showSlides(n) {
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
-</div>
+</div> -->
