pushing updated work

--- a/finalproject.html
+++ b/finalproject.html
@@ -184,7 +184,7 @@ function showSlides(n) {
       <li class=" navbtn"><a href="">Issues</a></li>
       <li class="dropdown navbtn "><a class="dropdown-toggle" data-toggle="dropdown" href="#get">Get Involved<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="">Donate</a></li>
+          <li><a href="./donate.html">Donate</a></li>
           <li ><a href="">Resources</a></li>
         </ul>
       </li>
