--- a/finalproject.html
+++ b/finalproject.html
@@ -182,7 +182,7 @@
       <li class=" navbtn"><a href="">Issues</a></li>
       <li class="dropdown navbtn "><a class="dropdown-toggle" data-toggle="dropdown" href="#get">Get Involved<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="./donate.html">Donate</a></li>
+          <li><a href="">Donate</a></li>
           <li ><a href="">Resources</a></li>
         </ul>
       </li>
@@ -217,6 +217,7 @@
 <br>
 <br>
 <br>
+
 <html>
 <title>W3.CSS</title>
 
