Resolving merge conflicts

--- a/finalproject.html
+++ b/finalproject.html
@@ -10,41 +10,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<<<<<<< HEAD
-=======
-  <!-- <script> var slideIndex = 1;
-showSlides(slideIndex);
 
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-}
-</script> -->
->>>>>>> 18976d3b3ce036bffe28a9550682aca341a98ae9
   <style>
   /** {box-sizing:border-box}
-
-<<<<<<< HEAD
-=======
   /* Slideshow container */
   /*.slideshow-container {
     max-width: 1000px;
@@ -125,7 +93,6 @@ function showSlides(n) {
     animation-name: fade;
     animation-duration: 1.5s;
   }
->>>>>>> 18976d3b3ce036bffe28a9550682aca341a98ae9
 
   @-webkit-keyframes fade {
     from {opacity: .4}
@@ -143,11 +110,7 @@ function showSlides(n) {
     #issues.hover{font-size: 60px;}
 
     #BG{
-<<<<<<< HEAD
     background-image: url("rain.gif");
-=======
-    background-image: url(https://media.giphy.com/media/uTKMak6CjKvx6/giphy.gif);
->>>>>>> 18976d3b3ce036bffe28a9550682aca341a98ae9
     background-size: cover;
     background-size: 100%;
     align:center
@@ -219,16 +182,12 @@ function showSlides(n) {
       <li class=" navbtn"><a href="">Issues</a></li>
       <li class="dropdown navbtn "><a class="dropdown-toggle" data-toggle="dropdown" href="#get">Get Involved<span class="caret"></span></a>
         <ul class="dropdown-menu">
-<<<<<<< HEAD
-          <li ><a href="">Donate</a></li>
-=======
           <li><a href="./donate.html">Donate</a></li>
->>>>>>> 18976d3b3ce036bffe28a9550682aca341a98ae9
           <li ><a href="">Resources</a></li>
         </ul>
       </li>
       <li class="navbtn"><a href="#game">Game</a></li>
-      <li class="navbtn"><a href="./projectCode.html">About Us</a></li>
+      <li class="navbtn"><a href="./AboutUs.html">About Us</a></li>
     </ul>
   </div>
 </nav>
@@ -281,8 +240,6 @@ body, html {
   position: relative;
 }
 
-<<<<<<< HEAD
-=======
 .hero-text {
   text-align: center;
   position: absolute;
@@ -374,7 +331,6 @@ body, html {
     <img src="img1.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
->>>>>>> 18976d3b3ce036bffe28a9550682aca341a98ae9
 
 <br>
 <br>
@@ -386,16 +342,8 @@ body, html {
 
 
 
-<<<<<<< HEAD
 <h1>The   Geo   Effect</h1>
 <br>
 <br>
 <br>
 <!-- <h2>"Think Globally Act Locally"</h2> -->
-=======
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div> -->
->>>>>>> 18976d3b3ce036bffe28a9550682aca341a98ae9
