--- a/finalproject.html
+++ b/finalproject.html
@@ -179,14 +179,14 @@
       <a class="navbar-brand" href="#">The Geo Effect</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class=" navbtn"><a href="">Issues</a></li>
-      <li class="dropdown navbtn "><a class="dropdown-toggle" data-toggle="dropdown" href="#get">Get Involved<span class="caret"></span></a>
+      <li class="dropdown navbtn"><a class="dropdown-toggle" data-toggle="dropdown" href="#get">The Issue<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="./donate.html">Donate</a></li>
-          <li ><a href="">Resources</a></li>
+          <li><a href="./issues/gwcindex.html">Climate Change</a></li>
+          <li><a href="./googleapi.html">GOOGLE API</a></li>
         </ul>
       </li>
-      <li class="navbtn"><a href="#game">Game</a></li>
+      <li class="navbtn"><a href="./donate.html">Donate</a></li>
+      <li class="navbtn"><a href="./">Blog</a></li>
       <li class="navbtn"><a href="./AboutUs.html">About Us</a></li>
     </ul>
   </div>
