--- a/issues/gwcindex.html
+++ b/issues/gwcindex.html
@@ -18,6 +18,25 @@
    height:50vh;
    width: 100%;
  }
+ #pica {
+   float: left;
+   height: 100%;
+   width: 25%;
+ }
+
+ #info {
+   float: left;
+   margin-right: 3%;
+   margin-left: 3%;
+   height: 100%;
+   width: 42%;
+ }
+
+ #picb {
+   float: right;
+   height: 100%;
+   width: 25%
+ }
 
  #pic1 {
    float: left;
@@ -64,12 +83,19 @@
 </head>
 
 
-  <body style="margin-left:2%; margin-right:2%">
+  <body style="background-color:grey; margin:15px">
     <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
     <div style="background-image:url(https://media.giphy.com/media/uTKMak6CjKvx6/giphy.gif); height:75%; width:100%; background-size: cover;">
       <div class="text">
         <h2>Climate Change </h2>
       </div>
+      <br>
+    </div>
+    <br>
+    <div class="container">
+      <img id="pica" src="use1.jpg">
+      <div id="info"><div class="double"> HIHIHIHIHIHIHIHIHIHIHIHI </div> </div>
+      <img id="picb" src="use2.jpg">
     </div>
     <br>
     <div class="container">
@@ -86,6 +112,10 @@
       <img id="pic3" src="test3.jpg">
       <div id="info3"><div class="double"> josjosjsojsojsojsojsoj </div> </div>
     </div>
+    <br>
+    <div class="container">
+      <div id="info4">
+
 
 
 
