--- a/issues/gwcindex.html
+++ b/issues/gwcindex.html
@@ -3,6 +3,10 @@
   <title>The Issue</title>
 
   <style>
+  body {
+    background-color: gray;
+  }
+
    h1 {
      font-size: 100px;
    }
@@ -18,6 +22,26 @@
    height:50vh;
    width: 100%;
  }
+
+#pica {
+  float: left;
+  height: 90%;
+  width: 40%;
+}
+
+#info {
+  float: left;
+  height: 90%;
+  margin-right: 2.5%;
+  margin-left: 2.5%;
+  width: 15%;
+}
+
+#picb {
+  float: right;
+  height: 90%;
+  width: 40%;
+}
 
  #pic1 {
    float: left;
@@ -58,27 +82,30 @@
   border: 5px double black;
   height: 97%;
   width: 100%;
-  /*float:right;*/
 }
   </style>
 </head>
 
 
-  <body style="margin-left:2%; margin-right:2%">
+  <body>
     <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
-    <div style="background-image:url(https://media.giphy.com/media/uTKMak6CjKvx6/giphy.gif); height:75%; width:100%; background-size: cover;">
-      <div class="text">
-        <h2>Climate Change </h2>
-      </div>
+    <div style="background-image:url(https://media.giphy.com/media/SstzNLEgrOjBu/giphy.gif); height:92%; width:100%; bacground-size:cover;"> </div>
+    <br>
+    <div class="container">
+      <img id="pica" src="world1.jpg">
+      <div id="info"> <div class="double"> <center> Climate change is the drastic difference in an area’s typical temperature over time. Human activity is a major contributor to this change. </center> </div> </div>
+      <img id="picb" src="world2.jpg">
+    <div>
+    <br>
+    <div class="container">
+      <img id="pic1" src="deforestation.jpg">
+      <div id="info1"><div class="double"> <center> With the need to clear forests for construction, deforestation occurs. Deforestation is the destruction of forests, especially tropical rainforests to make land available for housing and urbanization, to harvest timber to create commercial items such as paper, furniture, and homes, and to create ingredients that are valued consumer items.
+      Trees absorb carbon dioxide from the atmosphere to regulate the climate. By cutting down these trees, the carbon dioxide stored in these trees is released into the atmosphere which adds to the greenhouse effect. Deforestation leads to between 6 to 12 percent of global carbon dioxide being emitted annually. </center> </div> </div>
     </div>
     <br>
     <div class="container">
-      <img id="pic1" src="test1.jpg">
-      <div id="info1"><div class="double"> HIHIHIHIHIHIHI </div> </div>
-    </div>
-    <br>
-    <div class="container">
-      <div id="info2"><div class="double"> asicjwjosjoejoehiehihe kwnmfmdokp djoqjpf dsmoajp dqoajoajcfojawodjoedjowejdojeojdoj odjojqdfojowjo </div> </div>
+      <div id="info2"><div class="double"> Snow and ice have melted because of the increase in Earth’s temperature, thus causing sea levels to rise. According to the Environmental Protection Agency, the global sea level has risen between 6 to 8 inches in the last century. If sea levels were to rise more than 6 feet, most major cities including New York City would be at risk.
+ </div> </div>
       <img id="pic2" src="test5.jpg">
     </div>
     <br>
