--- a/AboutUs.html
+++ b/AboutUs.html
@@ -145,7 +145,8 @@ html {
 <br>
   <div class="top" align="middle">
     <div class="card">
-      <img src="group.jpg" alt="Group" class="img-circle" width="304" height="236">
+      <img src="group.jpg" alt="Group" class="img-circle" width="760" height="610">
+      <br>
       <p> We were inspired to create this website because we were all concerned about how climate change has negatively been affecting our planet and we wanted to draw as much awareness to the issue as possible. By creating this site we hope to inform and involve users so that together we can make a difference and stop climate change!
       <h2> About Us </center></h2>
       <br>
@@ -155,7 +156,7 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="shreya.jpg" alt="Shreya" class="img-circle" width="304" height="236">
+      <img src="shreya.jpg" alt="Shreya" class="img-circle" width="230" height="236">
       <div class="container2">
         <h2>Shreya Barua</h2>
         <p class="title">Clarkston High School</p>
@@ -171,7 +172,7 @@ html {
   </div>
   <div class="column">
     <div class="card">
-      <img src="dog.jpg" alt="dog" class="img-circle" width="275" height="236">
+      <img src="nalini.jpg" alt="dog" class="img-circle" width="230" height="236">
       <div class="container2">
         <h2 width="100%">Nalini Ramdeo</h2>
         <p width="100%" class="title">Townsend Harris High School</p>
@@ -187,7 +188,7 @@ html {
   </div>
   <div class="column">
     <div class="card">
-      <img src="josephine.jpg" alt="Josephine" class="img-circle" width="304" height="236">
+      <img src="jose.jpg" alt="Josephine" class="img-circle" width="230" height="236">
       <div class="container2">
         <h2>Josephine Leung</h2>
         <p class="title">Midwood High School</p>
@@ -204,7 +205,7 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="bella.jpg" alt="Bella" class="img-circle" width="304" height="236">
+      <img src="bella.jpg" alt="Bella" class="img-circle" width="230" height="236">
       <div class="container2">
         <h2>Bella Achu</h2>
         <p class="title">Fiorello H. LaGuardia High School</p>
