--- a/googleapi.html
+++ b/googleapi.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link href="googleapi.css" rel="stylesheet"/>
+<link href="googleapi.css" rel="stylesheet">
 <body>
 
 
@@ -19,6 +19,8 @@
 <div class ="container">
   <div class ="desc">
   	<p>Uganda</p>
+    <h6> In recent years Uganda has greatly suffered from the effects of climate change through the increase in average temperatures. Because its people are so vulnerable to the shifts in climate, there has been a drastic increase in food insecurity, spread of disease, soil erosion and land degradation. The entire infrastructure of Uganda has reduced in quality and so has its agricultural and natural resources.
+  </h6>
    </div>
   <div class = "map">
   	<div id="googleMap1" style="width:100%;height:100%;"></div>
@@ -35,16 +37,19 @@
    </div>
   <div class ="desc">
   	<p>Kiribati</p>
+    <h6> Due to all the environmental and climatic problems associated with the pacific island of Kiribati, it has been accepted that this island is no longer inhabitable. Large segments of the land has been engulfed with rising seas which have taken over the livelihoods of large populations. The damaging warm water has also destroyed coral reefs, disrupted the food supply, increased erosion and increased the presence of diseases. </h6>
    </div>
   <div class = "pic">
   	<img src="kiribati.jpg" style="width:100%;height:100;">
    </div>
 </div>
+<br>
 <hr>
 
 <div class ="container">
   <div class ="desc">
   	<p>The Alps</p>
+    <h6>For over a century now, the glaciers of the Alps have begun to recede thus posing a serious threat to the nature of the mountain range. As higher temperatures now take position, landslides, avalanches, and floods have become more prevalent and the volume of water stored show 10%  less than that of ice. Not only that but it has become easier for unknown pathogens to invade resulting in diseases to arouse and plants to be displaced. </h6>
    </div>
   <div class = "map">
   	<div id="googleMap3" style="width:100%;height:100%;"></div>
@@ -53,6 +58,7 @@
   	<img src="alps.jpg" style="width:100%;height:100;">
    </div>
 </div>
+<br>
 <hr>
 
 <div class ="container">
@@ -61,6 +67,7 @@
    </div>
   <div class ="desc">
   	<p>Bangladesh</p>
+    <h6>In Bangladesh, the problem of rising sea levels has become a serious issue. This has resulted in many of its residents being driven further inland since the land is rapidly turning into sea bottom. Where there once stood stood someone’s home, there is now water engulfing the whole landscape. As of right now, nearly ¼ of Bangladesh is less than 7 ft about sea level and ⅔ of it is less than 15 ft above sea level. </h6>
    </div>
   <div class = "pic">
   	<img src="bangladesh.jpg" style="width:100%;height:100;">
@@ -71,6 +78,7 @@
 <div class ="container">
   <div class ="desc">
   	<p>Vietnam</p>
+    <h6>There has been noticeable changes in Vietnam’s climate regarding its rise in temperatures and sea level. Recently it has been recorded that there are significantly more “hot” days in the summer and significantly less cold days in the winter. Not only that the annual rainfall proportions no longers seem to be coherent with those of previous years. Regarding the sea level change, studies show that in some places it has decreased and in others it has increased, which of course is of great concern because of its imbalance. </h6>
    </div>
   <div class = "map">
   	<div id="googleMap5" style="width:100%;height:100%;"></div>
@@ -79,9 +87,36 @@
   	<img src="vietnam.jpg" style="width:100%;height:100;">
    </div>
 </div>
+<br>
+<br>
 <hr>
 
 <script src="googleapi.js" type="text/javascript"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHmhv-nqcC6G2LtdlBufD0qPEQ63JL0RQ&callback=myMap"></script>
+
+<!-- Footer starts here -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="hero-image">
+  <div class="hero-text">
+     <h5>JOIN US IN THE FIGHT TO END <br> CLIMATE CHANGE </h5>
+
+<a href="#" class="fa fa-facebook"></a>
+<a href="https://www.instagram.com/climahelp/?hl=ens" class="fa fa-instagram"></a>
+<a href="#" class="fa fa-twitter"></a>
+
+
+<p> &copy; Copyright 2017. All rights reserved.</p>
+<img src="adobelogo.png" style="width:70px;height:40px;">
+<img src="GWC.png" style="width:70px;height:50px;">
+
+</div>
+
+
+  </div>
+</div>
 </body>
 </html>
