--- a/finalproject.html
+++ b/finalproject.html
@@ -4,7 +4,7 @@
 <body background= url("glaciers3.jpg")>
 <head>
 
-  <title>The Geo Effect</title>
+  <title>The GeoEffect</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=3">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -34,9 +34,9 @@
   }
 
     #nav{
-      top: 30px;
       background-color: #212323; opacity: 0.5; filter: alpha(opacity=50);
-      height:80px  }
+      height:80px ;
+    }
 
 
     .webname{
@@ -60,6 +60,7 @@
       outline: none;
       border: none;
       position: fixed;
+
     }
     .navbar-brand{
       font-size: 40px;
@@ -67,13 +68,16 @@
        margin-top: 14px;
 
     }
-    h1{
-      text-align:center;
-      font-family: serif;
-     font-size: 50px;
-     color:white;
-      opacity: 0.32;
-}
+
+   .myslides{
+     {
+            float: top;
+            margin: 0px;
+            padding: 0px;
+            position: relative;
+        }
+   }
+
 
     /*h2
       text-align:center;
@@ -89,14 +93,14 @@
 </body>
 </html>
 <body id= "BG">
-<nav id= "nav"
+<nav id= "nav">
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">The Geo Effect</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="dropdown navbtn"><a class="dropdown-toggle" data-toggle="dropdown" href="#get">The Issue<span class="caret"></span></a>
+    <ul class="nav navbar-nav" >
+      <li class="dropdown navbtn"><a class="dropdown-toggle" data-toggle="dropdown" href="#get" >The Issue<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="./issues/gwcindex.html">Climate Change</a></li>
           <li><a href="./googleapi.html">GOOGLE API</a></li>
@@ -108,13 +112,16 @@
     </ul>
   </div>
 </nav>
-<br>
-<br>
-<div class="w3-content w3-display-container">
-<img class="mySlides" src="glaciers3.jpg" style="width:100%">
+</nav>
+
+<div class=" w3-display-container"  style="height:100vh">
+<img class="mySlides" src="TGE.jpg" style="width:100%">
+<iframe class="mySlides"width=100% height=100% src="https://www.youtube.com/embed/Ok8rMT2KCy0" frameborder="0" allowfullscree>
+</iframe>
+<img class="mySlides" src="NASA.png"  style="width:100%">
 <img class="mySlides" src="fire.jpg" style="width:100%">
-<img class="mySlides" src="fossilfuels2.jpg" style="width:100%">
 <img class="mySlides" src="ice.jpg" style="width:100%">
+
 
 <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
 <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
@@ -250,26 +257,6 @@ body, html {
 
 
 
-<!--
-<div class="slideshow-container">
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="img1.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
-  </div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 
-
-<h1>The   Geo   Effect</h1>
-<br>
-<br>
-<br>
 <!-- <h2>"Think Globally Act Locally"</h2> -->
