--- a/finalproject.html
+++ b/finalproject.html
@@ -107,7 +107,7 @@
         </ul>
       </li>
       <li class="navbtn"><a href="./donate.html">Donate</a></li>
-      <li class="navbtn"><a href="./">Blog</a></li>
+      <li class="navbtn"><a href="./blog.hbs">Blog</a></li>
       <li class="navbtn"><a href="./AboutUs.html">About Us</a></li>
     </ul>
   </div>
