--- a/issues/gwcindex.html
+++ b/issues/gwcindex.html
@@ -54,7 +54,7 @@
   }
 
   .parallax {
-    background-image:url(https://media.giphy.com/media/uTKMak6CjKvx6/giphy.gif);
+    background-image:url('earth3.jpg');
     height: 100%;
     background-attachment: fixed;
     background-position: center;
@@ -79,11 +79,6 @@
    width: 100%;
  }
 
-#pica {
-  float: left;
-  height: 90%;
-  width: 40%;
-}
 
 #info {
   float: left;
@@ -93,11 +88,6 @@
   width: 15%;
 }
 
-#picb {
-  float: right;
-  height: 90%;
-  width: 40%;
-}
 
  #pic1 {
    float: left;
@@ -199,17 +189,17 @@
   </div>
 </nav>
 <!-- nav bar body ends -->
-<!-- parallax begins -->
-    <div class="parallax"></div>
-    <div style="height:1000px;background-color:white;font-size:16px;">
-<!-- parallax ends -->
-    <br>
-<!-- info begins -->
-    <div class="container">
-      <img id="pica" src="world1.jpg">
-      <div id="info"> <div class="double"> <center> Climate change is the drastic difference in an area’s typical temperature over time. Human activity is a major contributor to this change. </center> </div> </div>
-      <img id="picb" src="world2.jpg">
+    <div class="parallax">
+    <div style="height: 1000px; width: 1000px; background: rgba(220, 220, 220, 0);font-size:16px;">
+      <br>
+    <div class="container" style="margin-top: 130px; color: white; font-size: 23px;">
+    <div id="info"> <div class="double"> <center> Climate change is the drastic difference in an area’s typical temperature over time. Human activity is a major contributor to this change. </center> </div> </div>
     </div>
+    </div>
+    </div>
+
+
+
     <br>
     <div class="container">
       <img id="pic1" src="deforestation.jpg">
