--- a/issues/gwcindex.html
+++ b/issues/gwcindex.html
@@ -79,6 +79,11 @@
    width: 100%;
  }
 
+.verticallyalign {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 #info {
   float: left;
@@ -140,13 +145,13 @@
 #pic5 {
   float: left;
   height:100%;
-  width: 50%;
+  width: 45%;
 }
 
 #info5 {
   float: right;
   height: 100%;
-  width: 48%;
+  width: 50%;
 }
 
 .double{
@@ -203,28 +208,28 @@
     <br>
     <div class="container">
       <img id="pic1" src="deforestation.jpg">
-      <div id="info1"><div class="double"> <center> With the need to clear forests for construction, deforestation occurs. Deforestation is the destruction of forests, especially tropical rainforests to make land available for housing and urbanization, to harvest timber to create commercial items such as paper, furniture, and homes, and to create ingredients that are valued consumer items.
+      <div id="info1"><div class="double verticallyalign"><center> With the need to clear forests for construction, deforestation occurs. Deforestation is the destruction of forests, especially tropical rainforests to make land available for housing and urbanization, to harvest timber to create commercial items such as paper, furniture, and homes, and to create ingredients that are valued consumer items.
       Trees absorb carbon dioxide from the atmosphere to regulate the climate. By cutting down these trees, the carbon dioxide stored in these trees is released into the atmosphere which adds to the greenhouse effect. Deforestation leads to between 6 to 12 percent of global carbon dioxide being emitted annually. </center> </div> </div>
     </div>
     <br>
     <div class="container">
-      <div id="info2"><div class="double"> <center> Snow and ice have melted because of the increase in Earth’s temperature, thus causing sea levels to rise. According to the Environmental Protection Agency, the global sea level has risen between 6 to 8 inches in the last century. If sea levels were to rise more than 6 feet, most major cities including New York City would be at risk. Without ice sheets and ice caps, scientists would not be able learn about past changes in Earth’s climate. Ice sheets are made of layers of snow and ice that contain trapped gases, dust, and water molecules that have been collected over millions of years. </center> </div> </div>
+      <div id="info2"><div class="double verticallyalign"> <center> Snow and ice have melted because of the increase in Earth’s temperature, thus causing sea levels to rise. According to the Environmental Protection Agency, the global sea level has risen between 6 to 8 inches in the last century. If sea levels were to rise more than 6 feet, most major cities including New York City would be at risk. Without ice sheets and ice caps, scientists would not be able learn about past changes in Earth’s climate. Ice sheets are made of layers of snow and ice that contain trapped gases, dust, and water molecules that have been collected over millions of years. </center> </div> </div>
       <img id="pic2" src="sealevels.jpg">
     </div>
     <br>
     <div class="container">
       <img id="pic3" src="cc4(ward hunt ice shelf).jpg">
-      <div id="info3"><div class="double"> <center> According to NASA, polar ice caps are melting at an alarming rate of 9% per decade. The thickness of the Arctic Ice has decreased 40% since the 1960s. Between 2003 and 2008, 2 trillion tons of ice in Greenland, Antarctica and Alaska have melted. Every second, 12,500 tons of water is added into our oceans. 	The Greenland ice sheet measures around 650,000 square miles. If all the ice melts, the sea will rise by 20 feet. Antarctica consists of about 90% of the world’s ice and approximately 70% it is fresh water. The Ward Hunt Ice Shelf - the largest block of ice in the Arctic - has been around for the last 3000 years. Nearly two decades ago, the shelf split and is now breaking into little pieces. </center> </div> </div>
+      <div id="info3"><div class="double verticallyalign"> <center> According to NASA, polar ice caps are melting at an alarming rate of 9% per decade. The thickness of the Arctic Ice has decreased 40% since the 1960s. Between 2003 and 2008, 2 trillion tons of ice in Greenland, Antarctica and Alaska have melted. Every second, 12,500 tons of water is added into our oceans. 	The Greenland ice sheet measures around 650,000 square miles. If all the ice melts, the sea will rise by 20 feet. Antarctica consists of about 90% of the world’s ice and approximately 70% it is fresh water. The Ward Hunt Ice Shelf - the largest block of ice in the Arctic - has been around for the last 3000 years. Nearly two decades ago, the shelf split and is now breaking into little pieces. </center> </div> </div>
     </div>
     <br>
     <div class="container">
-      <div id="info4"><div class="double"> euds9jfcjfoadfj </div> </div>
-      <img id="pic4" src="test4.jpg">
+      <div id="info4"><div class="double verticallyalign"> <center> By burning coal, oil and gas for energy we are emitting more gases into the atmosphere which causes the air to heat up. Fossil fuels provide most of the energy that supports human transportation, electricity production, heating and cooling of buildings, and industrial activity. A stronger greenhouse effect will create warmer conditions that will lead to more evaporation and precipitation overall, but individual regions will vary, some becoming wetter and others dryer. </center> </div> </div>
+      <img id="pic4" src="burning.jpg">
     </div>
     <br>
     <div class="container">
-      <img id="pic5" src="test5.jpg">
-      <div id="info5"><div class="double"> wdkeofjeojow </div> </div>
+      <img id="pic5" src="climatemarch.jpg">
+      <div id="info5"><div class="double verticallyalign"> <center> Instead of contributing to climate change, you can help prevent it by eating less meat particularly beef because cows and sheeps produce large amounts of methane when they digest their food. Try to drive less and bike more! Don't forget to reduce, reuse and recylce, instead of using plastic bags, bring a reusable shopping bag. Energy efficient light bulbs reduce greenhouse gas emissions. Also, flip the light switch off when you leave the room. Also, don't forget to turn off the faucet because the less water you use, the less runoff and wastewater that ends up in the ocean. Volunteer for cleanups in your community and always further your own education so you can help others understand the importance and value of our natural resources. </center> </div> </div>
     </div>
 
   </div>
