--- a/AboutUs.html
+++ b/AboutUs.html
@@ -233,9 +233,9 @@ html {
      <h5>JOIN US IN THE FIGHT TO END <br> CLIMATE CHANGE </h5>
 
 <!-- Add font awesome icons -->
-<a href="#" class="fa fa-facebook"></a>
-<a href="https://www.instagram.com/climahelp/?hl=ens" class="fa fa-instagram"></a>
-<a href="#" class="fa fa-twitter"></a>
+<a href="https://www.facebook.com/The-GeoEffect-164138030819261/" class="fa fa-facebook"></a>
+<a href="https://www.instagram.com/the_geoeffect/" class="fa fa-instagram"></a>
+<a href="https://twitter.com/the_geoeffect" class="fa fa-twitter"></a>
 
 <div>
 <p> &copy; Copyright 2017. All rights reserved. </p>
