--- a/donate.html
+++ b/donate.html
@@ -144,9 +144,9 @@ body, html {
 <body>
 
 <!-- Add font awesome icons -->
-<a href="#" class="fa fa-facebook"></a>
-<a href="https://www.instagram.com/climahelp/?hl=ens" class="fa fa-instagram"></a>
-<a href="#" class="fa fa-twitter"></a>
+<a href="https://www.facebook.com/The-GeoEffect-164138030819261/" class="fa fa-facebook"></a>
+<a href="https://www.instagram.com/the_geoeffect/" class="fa fa-instagram"></a>
+<a href="https://twitter.com/the_geoeffect" class="fa fa-twitter"></a>
 
 
 <p> &copy; Copyright 2017. All rights reserved. </p>
