--- a/issues/gwcindex.html
+++ b/issues/gwcindex.html
@@ -159,6 +159,69 @@
   height: 97%;
   width: 100%;
 }
+/*Footer starts here*/
+.hero-image {
+  background-image: url("clima.jpg");
+  height: 60%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+}
+
+.hero-text button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: black;
+  background-color: #ddd;
+  text-align: center;
+  cursor: pointer;
+}
+
+.hero-text button:hover {
+  background-color: #555;
+  color: white;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
 /* info for the body ends */
   </style>
 </head>
@@ -234,6 +297,30 @@
 
   </div>
 <!-- info ends -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="hero-image">
+  <div class="hero-text">
+     <h5>JOIN US IN THE FIGHT TO END <br> CLIMATE CHANGE </h5>
+
+<!-- Add font awesome icons -->
+<a href="https://www.facebook.com/The-GeoEffect-164138030819261/" class="fa fa-facebook"></a>
+<a href="https://www.instagram.com/the_geoeffect/" class="fa fa-instagram"></a>
+<a href="https://twitter.com/the_geoeffect" class="fa fa-twitter"></a>
+
+
+<p> &copy; Copyright 2017. All rights reserved. </p>
+<img src="adobelogo.png" style="width:70px;height:40px;">
+<img src="GWC.png" style="width:70px;height:50px;">
+
+</div>
+
+
+  </div>
+</div>
 
 </body>
 </html>
