--- a/issues/gwcindex.html
+++ b/issues/gwcindex.html
@@ -1,257 +1,34 @@
 <html>
-<head>
-  <title>The Issue</title>
-
-  <style>
-  /*navbar begins*/
-  #issues{background-color: Transparent; border:none;
-      background-color: Transparent; border:none;
-      font-size: 30px; color:white; font-family:serif;
-      outline: none;}
-
-
-
-      #nav{
-        background-color: #212323; opacity: 0.5; filter: alpha(opacity=50);
-        height:80px ;
-      }
-
-
-      .webname{
-        font-family: serif;
-        font-size: 40px;
-
-       margin-bottom: 0px
-
-      }
-      .navbtn{
-        outline: none;
-        margin-left:100px;
-        margin-top: 15px;
-        font-size: 25px;
-        position: absolute; right:60; bottom: 4px;
-       font-family:serif;
-        outline: none;}
-
-      }
-      .navbar{
-        outline: none;
-        border: none;
-        position: fixed;
-
-      }
-      .navbar-brand{
-        font-size: 40px;
-        font-family:serif;
-         margin-top: 14px;
-
-      }
-      /*navbar ends*/
-
-/* parallax begins*/
-  body, html {
-    height: 100%
-  }
-
-  .parallax {
-    background-image:url('earth3.jpg');
-    height: 100%;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: repeat;
-    background-size: cover;
-  }
-
-/*parallax ends*/
-
-
-/*info for the body begins*/
-   h2 {
-     font-family: 'Adamina';
-     text-align: center;
-     font-size:30px;
-   }
-
-   p.double {border-style: double;}
-
-   .container {
-   height:50vh;
-   width: 100%;
- }
-
-.verticallyalign {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#info {
-  float: left;
-  height: 90%;
-  margin-right: 2.5%;
-  margin-left: 2.5%;
-  width: 15%;
-}
-
-
- #pic1 {
-   float: left;
-   height: 100%;
-   width: 58%;
- }
-
- #info1 {
-   float: right;
-   height: 100%;
-   width: 40%;
- }
-
- #info2 {
-   float: left;
-   height: 100%;
-   width: 50%
- }
-
- #pic2 {
-   float: right;
-   height: 100%;
-   width: 48%;
- }
-
-#pic3 {
-  float: left;
-  height: 100%;
-  width: 40%;
-}
-
-#info3 {
-  float: right;
-  height: 100%;
-  width: 58%;
-}
-
-#info4 {
-  float: left;
-  height: 100%;
-  width: 58%;
-}
-
-#pic4 {
-  float: right;
-  height: 100%;
-  width: 40%;
-}
-
-#pic5 {
-  float: left;
-  height:100%;
-  width: 45%;
-}
-
-#info5 {
-  float: right;
-  height: 100%;
-  width: 50%;
-}
-
-.double{
-  border: 5px double black;
-  height: 97%;
-  width: 100%;
-}
-/*Footer starts here*/
-.hero-image {
-  background-image: url("clima.jpg");
-  height: 60%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: black;
-}
-
-.hero-text button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px 25px;
-  color: black;
-  background-color: #ddd;
-  text-align: center;
-  cursor: pointer;
-}
-
-.hero-text button:hover {
-  background-color: #555;
-  color: white;
-}
-
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
-
-.fa-instagram {
-  background: #125688;
-  color: white;
-}
-
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
-
-/* info for the body ends */
-  </style>
-</head>
-
-  <body  id= "BG">
-
-    <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
-
-<!-- nav bar body begins-->
+  <head>
+    <title>The Issue</title>
     <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <nav id= "nav"
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="../finalproject.html">Home</a>
-    </div>
-    <ul class="nav navbar-nav" >
-      <li class="navbtn"><a href="./gwcindex.html">Climate Change</a></li>
-      <li class="navbtn"><a href="../googleapi.html">Google API</a></li>
-      <li class="navbtn"><a href="../donate.html">Donate</a></li>
-      <li class="navbtn"><a href="../">Blog</a></li>
-      <li class="navbtn"><a href="../AboutUs.html" style="font-size:23px;">Meet the Team</a></li>
-    </ul>
-  </div>
-</nav>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="gwcindex.css" />
+    <link rel="stylesheet" href="../navbar.css" />
+    <link href='https://fonts.googleapis.com/css?family=Adamina' rel='stylesheet'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </head>
+  <body  id= "BG">
+    <nav id= "nav">
+      <nav class="navbar navbar-inverse">
+        <div class="container-fluid nav-center">
+          <ul class="nav navbar-nav">
+            <li class="navbtn"><a href="../finalproject.html">Home</a></li>
+            <li class="navbtn"><a href="./gwcindex.html">Climate Change</a></li>
+            <li class="navbtn"><a href="../googleapi.html">Google API</a></li>
+            <li class="navbtn"><a href="../donate.html">Donate</a></li>
+            <li class="navbtn"><a href="../">Blog</a></li>
+            <li class="navbtn"><a href="../AboutUs.html">Meet the Team</a></li>
+          </ul>
+        </div>
+      </nav>
+    </nav>
 <!-- nav bar body ends -->
     <div class="parallax">
     <div style="height: 1000px; width: 1000px; background: rgba(220, 220, 220, 0);font-size:16px;">
@@ -261,8 +38,6 @@
     </div>
     </div>
     </div>
-
-
 
     <br>
     <div class="container">
@@ -293,12 +68,6 @@
 
   </div>
   <br>
-<!-- info ends -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 <div class="hero-image">
   <div class="hero-text">
      <h5>JOIN US IN THE FIGHT TO END <br> CLIMATE CHANGE </h5>
