--- a/googleapi.html
+++ b/googleapi.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <link href="googleapi.css" rel="stylesheet">
+
+</head>
 <body>
-
-
   <div id="videoBlock">
     <video style="height:90%;width:100%" preload="preload"  id="video" autoplay="autoplay" loop="loop">
     <source src="http://int.nyt.com/data/videotape/finished/2016/07/1467406560/40958_1_mm-climate-kiribati_wg_1080p-1-1280.webm" type="video/webm"></source>
@@ -118,5 +118,6 @@
 
   </div>
 </div>
+
 </body>
 </html>
