--- a/googleapi.html
+++ b/googleapi.html
@@ -13,7 +13,7 @@
         <h1>Places Around the World Hit the Hardest by Climate Change</h1>
         <p>Video by Josh Haner</p>
       </div>
-
+<span class="tooltiptext">Pacific Island of Kiribati</span>
   </div>
 
 <div class ="container">
