--- a/googleapi.html
+++ b/googleapi.html
@@ -1,9 +1,78 @@
 <!DOCTYPE html>
 <html>
 <link href="googleapi.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=3">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<style>
+  #issues{background-color: Transparent; border:none;
+      background-color: Transparent; border:none;
+      font-size: 50px; color:white; font-family:serif;
+      outline: none;}
+      #issues.hover{font-size: 60px;}
 
+      #nav{
+        background-color: #212323; opacity: 0.5; filter: alpha(opacity=50);
+        height:80px ;
+      }
+
+
+      .webname{
+        font-family: serif;
+        font-size: 40px;
+
+       margin-bottom: 0px
+
+      }
+      .navbtn{
+        outline: none;
+        margin-left:100px;
+        margin-top: 15px;
+        font-size: 20px;
+        position: absolute; right:60; bottom: 4px;
+       font-family:serif;
+        outline: none;}
+        .navbtn:hover{font-size: 25px;}
+      }
+      .navbar{
+        outline: none;
+        border: none;
+        position: fixed;
+
+      }
+      .navbar-brand{
+        font-size: 25px;
+        font-family:serif;
+         margin-top: 14px;
+         margin-left: 14px;
+
+      }
+</style>
 </head>
 <body>
+
+  <nav id= "nav">
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header" style="margin-left:75px;">
+        <a class="navbar-brand" href="#" stlye="position:fixed" >Home</a>
+      </div>
+      <ul class="nav navbar-nav" stlye="position:fixed" >
+        <li class="navbtn"><a href="./issues/gwcindex.html">Climate Change</a></li>
+        <li class="navbtn"><a href="./googleapi.html">Google API</a></li>
+        <li class="navbtn"><a href="./donate.html">Donate</a></li>
+        <li class="navbtn"><a href="./blog.hbs">Blog</a></li>
+        <li class="navbtn"><a href="./AboutUs.html">Meet The Team</a></li>
+      </ul>
+    </div>
+  </nav>
+  </nav>
+
+
+
   <div id="videoBlock">
     <video style="height:90%;width:100%" preload="preload"  id="video" autoplay="autoplay" loop="loop">
     <source src="http://int.nyt.com/data/videotape/finished/2016/07/1467406560/40958_1_mm-climate-kiribati_wg_1080p-1-1280.webm" type="video/webm"></source>
@@ -13,7 +82,7 @@
         <h1>Places Around the World Hit the Hardest by Climate Change</h1>
         <p>Video by Josh Haner</p>
       </div>
-<span class="tooltiptext">Pacific Island of Kiribati</span>
+
   </div>
 
 <div class ="container">
