--- a/issues/gwcindex.html
+++ b/issues/gwcindex.html
@@ -6,9 +6,9 @@
   /*navbar begins*/
   #issues{background-color: Transparent; border:none;
       background-color: Transparent; border:none;
-      font-size: 50px; color:white; font-family:serif;
+      font-size: 30px; color:white; font-family:serif;
       outline: none;}
-      #issues.hover{font-size: 60px;}
+
 
 
       #nav{
@@ -32,7 +32,7 @@
         position: absolute; right:60; bottom: 4px;
        font-family:serif;
         outline: none;}
-        .navbtn:hover{font-size: 30px;}
+
       }
       .navbar{
         outline: none;
@@ -241,18 +241,14 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">The Geo Effect</a>
+      <a class="navbar-brand" href="../finalproject.html">Home</a>
     </div>
     <ul class="nav navbar-nav" >
-      <li class="dropdown navbtn"><a class="dropdown-toggle" data-toggle="dropdown" href="#get" >The Issue<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="./issues/gwcindex.html">Climate Change</a></li>
-          <li><a href="./googleapi.html">GOOGLE API</a></li>
-        </ul>
-      </li>
-      <li class="navbtn"><a href="./donate.html">Donate</a></li>
-      <li class="navbtn"><a href="./">Blog</a></li>
-      <li class="navbtn"><a href="./AboutUs.html">About Us</a></li>
+      <li class="navbtn"><a href="./gwcindex.html">Climate Change</a></li>
+      <li class="navbtn"><a href="../googleapi.html">Google API</a></li>
+      <li class="navbtn"><a href="../donate.html">Donate</a></li>
+      <li class="navbtn"><a href="../">Blog</a></li>
+      <li class="navbtn"><a href="../AboutUs.html" style="font-size:23px;">Meet the Team</a></li>
     </ul>
   </div>
 </nav>
